force-app/main/default/objects/Application_Cache__c/Application_Cache__c.object-meta.xml
<CustomObject>
    <description>Form Builder App</description>
    <label>Draft Application</label>
    <nameField>
        <label>Application Cache Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Draft Applications</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>