force-app/main/default/objects/Application_Cache__c/fields/App_No_View__c.field-meta.xml
<CustomField>
    <fullName>App_No_View__c</fullName>
    <description>Used for show the draft  application no and for view purpose</description>
    <formula>HYPERLINK(&quot;/lightning/r/Application_cache__c/&quot; +Id +&quot;/view&quot;, Draft_App_No__c,  &quot;_blank&quot;)</formula>
    <label>App No</label>
    <type>Text</type>
</CustomField>