force-app/main/default/objects/Application_Cache__c/fields/AppDataBeforeSubmit__c.field-meta.xml
<CustomField>
    <fullName>AppDataBeforeSubmit__c</fullName>
    <description>Used to store the data before submit</description>
    <label>App Data Before Submit</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>