force-app/main/default/objects/Application_Cache__c/fields/AppFileData__c.field-meta.xml
<CustomField>
    <fullName>AppFileData__c</fullName>
    <label>App File Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>