force-app/main/default/objects/Application_Cache__c/fields/Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Application_Id__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <label>Application Id</label>
    <type>AutoNumber</type>
</CustomField>