force-app/main/default/objects/Application_Cache__c/fields/Application_Meta_Data__c.field-meta.xml
<CustomField>
    <fullName>Application_Meta_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Meta Data</label>
    <referenceTo>Application_Meta_Data__c</referenceTo>
    <relationshipLabel>Application Cache</relationshipLabel>
    <relationshipName>Application_Cache</relationshipName>
    <type>Lookup</type>
</CustomField>