force-app/main/default/objects/Application_Cache__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assessment - replica instruments</fullName>
            </value>
            <value>
                <fullName>Cancelled Agreements</fullName>
            </value>
            <value>
                <fullName>Cancelled Transfers</fullName>
            </value>
            <value>
                <fullName>Exemption - Charitable ... bodies</fullName>
            </value>
            <value>
                <fullName>Exemption from duty</fullName>
            </value>
            <value>
                <fullName>Refund of overpayments</fullName>
            </value>
            <value>
                <fullName>Remission of interest</fullName>
            </value>
            <value>
                <fullName>Deceased estate</fullName>
            </value>
            <value>
                <fullName>Change in trustee</fullName>
            </value>
            <value>
                <fullName>Apparent purchaser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>