force-app/main/default/objects/Application_Cache__c/fields/AppTableData__c.field-meta.xml
<CustomField>
    <fullName>AppTableData__c</fullName>
    <label>App Table Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>