force-app/main/default/objects/Application_Cache__c/fields/Assigned__c.field-meta.xml
<CustomField>
    <fullName>Assigned__c</fullName>
    <description>Used to mark if an application has been assigned to other users</description>
    <formula>OwnerId !=  CreatedById</formula>
    <label>Assigned</label>
    <type>Checkbox</type>
</CustomField>