force-app/main/default/objects/Application_Cache__c/fields/BoardProgram__c.field-meta.xml
<CustomField>
    <fullName>BoardProgram__c</fullName>
    <label>Board Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>