force-app/main/default/objects/Application_Cache__c/fields/Card__c.field-meta.xml
<CustomField>
    <fullName>Card__c</fullName>
    <label>Card</label>
    <length>80</length>
    <type>Text</type>
</CustomField>