force-app/main/default/objects/Application_Cache__c/fields/Draft_App_No__c.field-meta.xml
<CustomField>
    <fullName>Draft_App_No__c</fullName>
    <formula>IF(contains(Application_Id__c,&quot;DT18&quot;),Application_Id__c,(&quot;DT&quot; + RIGHT(TEXT(YEAR(TODAY())), 2)  + Application_Id__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Draft App No</label>
    <type>Text</type>
</CustomField>