force-app/main/default/objects/Application_Cache__c/fields/Duties_Reassessment_Application__c.field-meta.xml
<CustomField>
    <fullName>Duties_Reassessment_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to find the reassessment parent.</description>
    <label>Reassessment Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Draft Applications</relationshipLabel>
    <relationshipName>Draft_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>