force-app/main/default/objects/Application_Cache__c/fields/Is_Created_by_myself__c.field-meta.xml
<CustomField>
    <fullName>Is_Created_by_myself__c</fullName>
    <formula>IF(CreatedById = $User.Id , true, false)</formula>
    <label>Is Created by myself</label>
    <type>Checkbox</type>
</CustomField>