force-app/main/default/objects/Application_Cache__c/fields/OSR_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>OSR_Reference_Id__c</fullName>
    <description>Used to show the OSR Reference Id from Mars.</description>
    <externalId>true</externalId>
    <label>OSR Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>