force-app/main/default/objects/Application_Cache__c/fields/Previous_Owner__c.field-meta.xml
<CustomField>
    <fullName>Previous_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Previous Owner is populated when Ownership is changed via &quot;Change Owner&quot; action by external admin.</description>
    <label>Previous Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PreviousOwnerDraftApplications</relationshipName>
    <type>Lookup</type>
</CustomField>