force-app/main/default/objects/Application_Cache__c/fields/PVLPortalUser__c.field-meta.xml
<CustomField>
    <fullName>PVLPortalUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PVL Portal User</label>
    <referenceTo>PVL_Portal_User__c</referenceTo>
    <relationshipLabel>Draft Applications</relationshipLabel>
    <relationshipName>Draft_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>