force-app/main/default/objects/Application_Cache__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Application Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exemption - Charitable ... bodies</fullName>
            </value>
            <value>
                <fullName>Correction of error</fullName>
            </value>
            <value>
                <fullName>63(1) - $50 - fixed</fullName>
            </value>
            <value>
                <fullName>63(2) - variation to trust in will / intestacy</fullName>
            </value>
            <value>
                <fullName>55(1)(a)</fullName>
            </value>
            <value>
                <fullName>55(1)(b)</fullName>
            </value>
            <value>
                <fullName>54(2)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>