force-app/main/default/objects/Application_Cache__c/fields/Sub_Type_Data__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type_Data__c</fullName>
    <description>Used to store the selections from the Application Type Selection page</description>
    <label>Sub Type Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>