force-app/main/default/objects/Application_Cache__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application_Id__c</columns>
    <columns>Status__c</columns>
    <columns>App_No_View__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OSR_Reference_Id__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>PVLPortalUser__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>