force-app/main/default/objects/Application_Cache__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Application_Id__c</columns>
    <columns>Application_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>