force-app/main/default/objects/Application_Cache__c/listViews/Pending_Application.listView-meta.xml
<ListView>
    <fullName>Pending_Application</fullName>
    <columns>NAME</columns>
    <columns>Application_Id__c</columns>
    <columns>Application_Meta_Data__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Submitted</value>
    </filters>
    <label>Pending Application</label>
</ListView>